--- a/make/global.ini
+++ b/make/global.ini
@@ -12,7 +12,7 @@ MXCPP_LIBRARY_NAME := $(MXCPP_CONFIG_SUFFIX)cpp
 MXCPP_SRC_LIST :=	\
 debug.cpp	\
 Memory.cpp	\
-new.c	\
+new.cpp	\
 OutOfMem.cpp	\
 Class.cpp	\
 Except.cpp	\
@@ -20,7 +20,7 @@ log.cpp	\
 malloc.cpp	\
 App/App.cpp	\
 App/TestApp.cpp	\
-System/msw/Error.cpp	\
+System/Error.cpp	\
 $(MXCPP_SRC_LIST_PLATFORM)
 
 # Tests list.
@@ -31,8 +31,11 @@ purec.c	\
 $(MXCPP_TEST_LIST_PLATFORM)
 
 
-# Sources main directory.
+# Main source directory.
 MXCPP_SRC_ROOT := $(MXCPP_PROJECT_ROOT)src/
+
+# Main include directory.
+MXCPP_INCLUDE_ROOT := $(MXCPP_PROJECT_ROOT)inc
 
 
 # Library main build types.
@@ -59,6 +62,83 @@ MXCPP_MOD_DEBUG := d
 MXCPP_LIB_CONSTRUCT_NAME = $(LIB_PFX)$(MXCPP_LIBRARY_NAME)$(1).$(LIB_SFX)
 MXCPP_LIBMT_CONSTRUCT_NAME = $(LIB_PFX)$(MXCPP_LIBRARY_NAME)mt$(1).$(LIB_SFX)
 MXCPP_DLL_CONSTRUCT_NAME = $(DLL_PFX)$(MXCPP_LIBRARY_NAME)$(MXCPP_LIBRARY_VERSION)$(1).$(DLL_SFX)
+
+
+MXCPP_COMPILERS_LIST := C CXX
+
+# Flags of the C++ compiler for different configurations.
+MXCPP_CFLAGS_LIB :=
+MXCPP_CFLAGS_LIBMT := $(CXX_DEFINE)_MT
+MXCPP_CFLAGS_DLL := $(CXX_DEFINE)_MT $(CXX_DEFINE)_DLL $(CXX_DEFINE)MXCPP_MAKEDLL
+
+MXCPP_CFLAGS_DEBUG := $(CXX_DEFINE)_DEBUG
+MXCPP_CFLAGS_RELEASE := $(CXX_DEFINE)NDEBUG
+MXCPP_CFLAGS_ANSI :=
+MXCPP_CFLAGS_UNICODE := $(CXX_DEFINE)UNICODE
+
+$(foreach libtype,$(MXCPP_TARGET_TYPE_SHARE),\
+$(foreach config,$(MXCPP_TARGET_SUBTYPE_CHARTYPE) $(MXCPP_TARGET_SUBTYPE_DBGINFO),\
+	$(eval MXCPP_CFLAGS_$(libtype)_$(config) :=)))
+
+# Flags of the C++ compiler for different configurations.
+$(foreach config,$(MXCPP_TARGET_TYPE_SHARE) $(MXCPP_TARGET_SUBTYPE_CHARTYPE) $(MXCPP_TARGET_SUBTYPE_DBGINFO),\
+	$(eval MXCPP_CXXFLAGS_$(config) := $(MXCPP_CFLAGS_$(config))))
+
+$(foreach libtype,$(MXCPP_TARGET_TYPE_SHARE),\
+$(foreach config,$(MXCPP_TARGET_SUBTYPE_CHARTYPE) $(MXCPP_TARGET_SUBTYPE_DBGINFO),\
+	$(eval MXCPP_CXXFLAGS_$(libtype)_$(config) := $(MXCPP_CFLAGS_$(libtype)_$(config)))))
+
+
+# Append platform configuration flags.
+# Not necessary yet.
+#$(foreach compiler,$(MXCPP_COMPILERS_LIST),\
+#$(foreach libtype,$(MXCPP_TARGET_TYPE_SHARE),\
+#$(foreach config,$(MXCPP_TARGET_SUBTYPE_CHARTYPE) $(MXCPP_TARGET_SUBTYPE_DBGINFO),\
+#	$(eval MXCPP_$(compiler)FLAGS_$(libtype)_$(config) += $(MXCPP_$(compiler)FLAGS_PLATFORM_$(libtype)_$(config))))))
+
+
+# Append compiler configuration flags.
+#
+# This is done here, not in the sub-platform initialization files, to simplify
+# the sub-platform makefiles (because it has to be done always).
+$(foreach compiler,$(MXCPP_COMPILERS_LIST),\
+$(foreach config,$(MXCPP_TARGET_TYPE_SHARE) $(MXCPP_TARGET_SUBTYPE_CHARTYPE) $(MXCPP_TARGET_SUBTYPE_DBGINFO),\
+	$(if $(strip $($(compiler)FLAGS_$(config))),\
+		$(eval MXCPP_$(compiler)FLAGS_$(config) += $($(compiler)FLAGS_$(config))))))
+
+$(foreach compiler,$(MXCPP_COMPILERS_LIST),\
+$(foreach libtype,$(MXCPP_TARGET_TYPE_SHARE),\
+$(foreach config,$(MXCPP_TARGET_SUBTYPE_CHARTYPE) $(MXCPP_TARGET_SUBTYPE_DBGINFO),\
+	$(if $(strip $($(compiler)FLAGS_$(libtype)_$(config))),\
+		$(eval MXCPP_$(compiler)FLAGS_$(libtype)_$(config) += $($(compiler)FLAGS_$(libtype)_$(config)))))))
+
+
+
+# The command for compiling standard source types.
+#
+# @param $(1) The compiler name.
+# @param $(2) The compiler flags ID.
+# @param $(3) The source file name(s).
+# @param $(4) The library configuration type.
+# @param $(5) The character configuration type.
+# @param $(6) The debuginfo configuration type.
+MXCPP_COMPILE_STANDARD = $($(1)) $(MXCPP_$(2)FLAGS) $(if $(strip $(MXCPP_$(2)FLAGS_$(4))),$(MXCPP_$(2)FLAGS_$(4)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(5))),$(MXCPP_$(2)FLAGS_$(5)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(6))),$(MXCPP_$(2)FLAGS_$(6)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(4)_$(5))),$(MXCPP_$(2)FLAGS_$(4)_$(5)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(4)_$(6))),$(MXCPP_$(2)FLAGS_$(4)_$(6)) )$($(1)_OUT)$$(subst /,$$(PATH_SEP),$$@) $(3)
+
+# The command for compiling ANSI-C sources.
+#
+# @param $(1) The source file name(s).
+# @param $(2) The library configuration type.
+# @param $(3) The character configuration type.
+# @param $(4) The debuginfo configuration type.
+MXCPP_COMPILE_CC = $(call MXCPP_COMPILE_STANDARD,CC,C,$(1),$(2),$(3),$(4))
+
+# The command for compiling C++ sources.
+#
+# @param $(1) The source file name(s).
+# @param $(2) The library configuration type.
+# @param $(3) The character configuration type.
+# @param $(4) The debuginfo configuration type.
+MXCPP_COMPILE_CXX = $(call MXCPP_COMPILE_STANDARD,CXX,CXX,$(1),$(2),$(3),$(4))
 
 
 # EOF #
