--- a/make/msw/platform.ini
+++ b/make/msw/platform.ini
@@ -1,7 +1,9 @@
 
 # The project source root.
-MXCPP_PROJECT_ROOT = ../../../../
+MXCPP_PROJECT_ROOT := ../../../../
 
+
+PATH_SEP := $(strip \)
 
 # Create directory.
 MKDIR := mkdir
@@ -20,6 +22,11 @@ NOERROUT := 2>NUL
 
 # Suffix of executables.
 EXE_SFX := .exe
+
+
+# Platform configuration flags.
+MXCPP_CFLAGS_PLATFORM :=
+MXCPP_CXXFLAGS_PLATFORM :=
 
 
 # Include global definitions.
