--- a/make/msw/win32/msvc7/makefile.ini
+++ b/make/msw/win32/msvc7/makefile.ini
@@ -1,4 +1,34 @@
 
+CC := cl
+CC_COMPILE_ONLY := /c
+CC_DEFINE := /D
+CC_INCLUDE := /I
+CFLAGS := /nologo /GR /GX /GF
+CC_OUT := /Fo
+CFLAGS_DEBUG := /W4 /Od /ZI /GZ
+CFLAGS_RELEASE := /W3 /O2
+CFLAGS_LIB_DEBUG := /MLd
+CFLAGS_LIB_RELEASE := /ML
+CFLAGS_LIBMT_DEBUG := /MTd
+CFLAGS_LIBMT_RELEASE := /MT
+CFLAGS_DLL_DEBUG := /MDd
+CFLAGS_DLL_RELEASE := /MD
+
+CXX := $(CC)
+CXX_COMPILE_ONLY := $(CC_COMPILE_ONLY)
+CXX_DEFINE := $(CC_DEFINE)
+CXX_INCLUDE := $(CC_INCLUDE)
+CXXFLAGS := $(CFLAGS)
+CXX_OUT := $(CC_OUT)
+CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
+CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
+CXXFLAGS_LIB_DEBUG := $(CFLAGS_LIB_DEBUG)
+CXXFLAGS_LIB_RELEASE := $(CFLAGS_LIB_RELEASE)
+CXXFLAGS_LIBMT_DEBUG := $(CFLAGS_LIBMT_DEBUG)
+CXXFLAGS_LIBMT_RELEASE := $(CFLAGS_LIBMT_RELEASE)
+CXXFLAGS_DLL_DEBUG := $(CFLAGS_DLL_DEBUG)
+CXXFLAGS_DLL_RELEASE := $(CFLAGS_DLL_RELEASE)
+
 OBJ_SFX := obj
 
 LIB_SFX := lib
