--- a/make/msw/win32/platform.ini
+++ b/make/msw/win32/platform.ini
@@ -3,6 +3,11 @@
 DLL_SFX := dll
 
 
+# Platform configuration flags.
+MXCPP_CFLAGS_SUBPLATFORM := $(CC_DEFINE)_WINDOWS $(CC_DEFINE)_WIN32 $(CC_DEFINE)WIN32
+MXCPP_CXXFLAGS_SUBPLATFORM := $(CXX_DEFINE)_WINDOWS $(CXX_DEFINE)_WIN32 $(CXX_DEFINE)WIN32
+
+
 # Include parent definitions.
 include ../../platform.ini
 
