--- a/make/global.ini
+++ b/make/global.ini
@@ -47,6 +47,11 @@ MXCPP_TARGET_SUBTYPE_DBGINFO := DEBUG RELEASE
 
 
 # Modifiers for different main build types.
+MXCPP_LIBCONFIG_LIB := LIB
+MXCPP_LIBCONFIG_LIBMT := LIB
+MXCPP_LIBCONFIG_DLL := DLL
+
+# Modifiers for different main build types.
 MXCPP_MOD_LIB := 
 MXCPP_MOD_LIBMT := _mt
 MXCPP_MOD_DLL := _dll
@@ -64,7 +69,7 @@ MXCPP_LIBMT_CONSTRUCT_NAME = $(LIB_PFX)$(MXCPP_LIBRARY_NAME)mt$(1).$(LIB_SFX)
 MXCPP_DLL_CONSTRUCT_NAME = $(DLL_PFX)$(MXCPP_LIBRARY_NAME)$(MXCPP_LIBRARY_VERSION)$(1).$(DLL_SFX)
 
 
-MXCPP_COMPILERS_LIST := C CXX
+MXCPP_COMPILERS_LIST := C CXX LIBC_ DLLC_
 
 # Flags of the C++ compiler for different configurations.
 MXCPP_CFLAGS_LIB :=
@@ -87,6 +92,7 @@ $(foreach config,$(MXCPP_TARGET_TYPE_SHARE) $(MXCPP_TARGET_SUBTYPE_CHARTYPE) $(M
 $(foreach libtype,$(MXCPP_TARGET_TYPE_SHARE),\
 $(foreach config,$(MXCPP_TARGET_SUBTYPE_CHARTYPE) $(MXCPP_TARGET_SUBTYPE_DBGINFO),\
 	$(eval MXCPP_CXXFLAGS_$(libtype)_$(config) := $(MXCPP_CFLAGS_$(libtype)_$(config)))))
+
 
 
 # Append platform configuration flags.
@@ -113,8 +119,7 @@ $(foreach config,$(MXCPP_TARGET_SUBTYPE_CHARTYPE) $(MXCPP_TARGET_SUBTYPE_DBGINFO
 		$(eval MXCPP_$(compiler)FLAGS_$(libtype)_$(config) += $($(compiler)FLAGS_$(libtype)_$(config)))))))
 
 
-
-# The command for compiling standard source types.
+# The standard command for compiling source files.
 #
 # @param $(1) The compiler name.
 # @param $(2) The compiler flags ID.
@@ -139,6 +144,23 @@ MXCPP_COMPILE_CC = $(call MXCPP_COMPILE_STANDARD,CC,C,$(1),$(2),$(3),$(4))
 # @param $(3) The character configuration type.
 # @param $(4) The debuginfo configuration type.
 MXCPP_COMPILE_CXX = $(call MXCPP_COMPILE_STANDARD,CXX,CXX,$(1),$(2),$(3),$(4))
+
+
+# The standard command for building libraries.
+#
+# @param $(1) The library configuration (LIB or DLL).
+# @param $(2) The object files list.
+# @param $(3) The character configuration type.
+# @param $(4) The debuginfo configuration type.
+MXCPP_BUILD_LIB_STANDARD = $($(1)) $(MXCPP_$(1)_FLAGS) $(if $(strip $(MXCPP_$(1)_FLAGS_$(3))),$(MXCPP_$(1)_FLAGS_$(3)) )$(if $(strip $(MXCPP_$(1)_FLAGS_$(4))),$(MXCPP_$(1)_FLAGS_$(4)) )$($(1)_OUT)$$@ $(2)
+
+# The command for building libraries.
+#
+# @param $(1) The object files list.
+# @param $(2) The character configuration type.
+# @param $(3) The debuginfo configuration type.
+MXCPP_BUILD_LIB = $(call MXCPP_BUILD_LIB_STANDARD,LIBC,$(1),$(2),$(3))
+MXCPP_BUILD_DLL = $(call MXCPP_BUILD_LIB_STANDARD,DLLC,$(1),$(2),$(3))
 
 
 # EOF #
