--- a/make/msw/win32/msvc7/makefile.ini
+++ b/make/msw/win32/msvc7/makefile.ini
@@ -31,7 +31,29 @@ CXXFLAGS_DLL_RELEASE := $(CFLAGS_DLL_RELEASE)
 
 OBJ_SFX := obj
 
+
+LDFLAGS := /nologo
+
+LNKC := link
+LNKC_FLAGS := $(LDFLAGS)
+LNKC_OUT := /out:
+LNKC_FLAGS_DEBUG := /debug /opt:noref
+LNKC_FLAGS_RELEASE := /opt:ref
+
+
+LIBC := $(LNKC)
+LIBC_FLAGS := /lib $(LNKC_FLAGS)
+LIBC_OUT := $(LNKC_OUT)
+
 LIB_SFX := lib
+
+
+DLLC := $(LNKC)
+DLLC_FLAGS := /dll $(LNKC_FLAGS)
+DLLC_OUT := $(LNKC_OUT)
+DLLC_FLAGS_DEBUG := $(LNKC_FLAGS_DEBUG)
+DLLC_FLAGS_RELEASE := $(LNKC_FLAGS_RELEASE)
+
 
 # Include parent definitions.
 include ../platform.ini
