--- a/make/global.ini
+++ b/make/global.ini
@@ -1,3 +1,11 @@
+##
+# @file
+#
+# Makefile for the Demo C++ Framework project - Global makefile (definitions).
+#
+# @author Emil Maskovsky
+#
+
 
 # Version of the library.
 MXCPP_LIBRARY_VERSION = 01
@@ -127,7 +135,7 @@ $(foreach config,$(MXCPP_TARGET_SUBTYPE_CHARTYPE) $(MXCPP_TARGET_SUBTYPE_DBGINFO
 # @param $(4) The library configuration type.
 # @param $(5) The character configuration type.
 # @param $(6) The debuginfo configuration type.
-MXCPP_COMPILE_STANDARD = $($(1)) $(MXCPP_$(2)FLAGS) $(if $(strip $(MXCPP_$(2)FLAGS_$(4))),$(MXCPP_$(2)FLAGS_$(4)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(5))),$(MXCPP_$(2)FLAGS_$(5)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(6))),$(MXCPP_$(2)FLAGS_$(6)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(4)_$(5))),$(MXCPP_$(2)FLAGS_$(4)_$(5)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(4)_$(6))),$(MXCPP_$(2)FLAGS_$(4)_$(6)) )$($(1)_OUT)$$(subst /,$$(PATH_SEP),$$@) $(3)
+MXCPP_COMPILE_STANDARD = $($(1)) $(MXCPP_$(2)FLAGS) $(if $(strip $(MXCPP_$(2)FLAGS_$(4))),$(MXCPP_$(2)FLAGS_$(4)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(5))),$(MXCPP_$(2)FLAGS_$(5)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(6))),$(MXCPP_$(2)FLAGS_$(6)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(4)_$(5))),$(MXCPP_$(2)FLAGS_$(4)_$(5)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(4)_$(6))),$(MXCPP_$(2)FLAGS_$(4)_$(6)) )$(if $(strip $($(2)FLAGS_OPTIONS)),$($(2)FLAGS_OPTIONS) )$($(1)_OUT)$$(subst /,$$(PATH_SEP),$$@) $(3)
 
 # The command for compiling ANSI-C sources.
 #
