--- a/make/msw/win32/msvc7/makefile.ini
+++ b/make/msw/win32/msvc7/makefile.ini
@@ -1,18 +1,28 @@
+##
+# @file
+#
+# Makefile for the Demo C++ Framework project
+#     - Microsoft Visual C++ 7.0 Compiler (definitions).
+#
+# @author Emil Maskovsky
+#
+
 
 CC := cl
-CC_COMPILE_ONLY := /c
-CC_DEFINE := /D
-CC_INCLUDE := /I
-CFLAGS := /nologo /GR /GX /GF
-CC_OUT := /Fo
-CFLAGS_DEBUG := /W4 /Od /ZI /GZ
-CFLAGS_RELEASE := /W3 /O2
-CFLAGS_LIB_DEBUG := /MLd
-CFLAGS_LIB_RELEASE := /ML
-CFLAGS_LIBMT_DEBUG := /MTd
-CFLAGS_LIBMT_RELEASE := /MT
-CFLAGS_DLL_DEBUG := /MDd
-CFLAGS_DLL_RELEASE := /MD
+CC_COMPILE_ONLY := -c
+CC_DEFINE := -D
+CC_INCLUDE := -I
+CFLAGS := -nologo -GR -GX -GF
+CC_OUT := -Fo
+CFLAGS_DEBUG := -W4 -Od -ZI -GZ
+CFLAGS_RELEASE := -W3 -O2
+CFLAGS_LIB_DEBUG := -MLd
+CFLAGS_LIB_RELEASE := -ML
+CFLAGS_LIBMT_DEBUG := -MTd
+CFLAGS_LIBMT_RELEASE := -MT
+CFLAGS_DLL_DEBUG := -MDd
+CFLAGS_DLL_RELEASE := -MD
+CFLAGS_OPTIONS = -Fd$$(@D)vc70.pdb
 
 CXX := $(CC)
 CXX_COMPILE_ONLY := $(CC_COMPILE_ONLY)
@@ -28,6 +38,7 @@ CXXFLAGS_LIBMT_DEBUG := $(CFLAGS_LIBMT_DEBUG)
 CXXFLAGS_LIBMT_RELEASE := $(CFLAGS_LIBMT_RELEASE)
 CXXFLAGS_DLL_DEBUG := $(CFLAGS_DLL_DEBUG)
 CXXFLAGS_DLL_RELEASE := $(CFLAGS_DLL_RELEASE)
+CXXFLAGS_OPTIONS = $(CFLAGS_OPTIONS)
 
 OBJ_SFX := obj
 
@@ -53,6 +64,13 @@ DLLC_FLAGS := /dll $(LNKC_FLAGS)
 DLLC_OUT := $(LNKC_OUT)
 DLLC_FLAGS_DEBUG := $(LNKC_FLAGS_DEBUG)
 DLLC_FLAGS_RELEASE := $(LNKC_FLAGS_RELEASE)
+
+
+MXCPP_CLEAN_MASK = $(1)*.sbr
+MXCPP_CLEAN_MASK_DEBUG = $(1)vc70.pdb $(1)vc70.idb
+
+MXCPP_CLEANALL_MASK_DLL = $(2:.dll=.lib) $(2:.dll=.exp)
+MXCPP_CLEANALL_MASK_DLL_DEBUG =  $(2:.dll=.pdb) $(2:.dll=.ilk)
 
 
 # Include parent definitions.
