--- a/make/msw/platform.ini
+++ b/make/msw/platform.ini
@@ -1,3 +1,12 @@
+##
+# @file
+#
+# Makefile for the Demo C++ Framework project
+#     - Microsoft systems platform dependent options (definitions).
+#
+# @author Emil Maskovsky
+#
+
 
 # The project source root.
 MXCPP_PROJECT_ROOT := ../../../../
