--- a/make/msw/win32/platform.ini
+++ b/make/msw/win32/platform.ini
@@ -1,3 +1,12 @@
+##
+# @file
+#
+# Makefile for the Demo C++ Framework project
+#     - Windows 32 system dependent options (definitions).
+#
+# @author Emil Maskovsky
+#
+
 
 # Suffix of shared (dynamic loaded) libraries.
 DLL_SFX := dll
