Move "platform.*" to "system.*"
Rename the system dependent makefiles from "platform.*" to "system.*".

--- a/make/msw/win32/msvc7/makefile
+++ b/make/msw/win32/msvc7/makefile
@@ -28,6 +28,6 @@ $(if $(strip $(MAKEFILE_LIST)),,$(eval $(call MXCPP_GMAKE_OLD)))
 include makefile.ini
 
 # Start parent make.
-include ../platform.mak
+include ../system.mak
 
 # EOF #
