--- a/make/msw/win32/msvc7/makefile.ini
+++ b/make/msw/win32/msvc7/makefile.ini
@@ -74,6 +74,6 @@ MXCPP_CLEANALL_MASK_DLL_DEBUG =  $(2:.dll=.pdb) $(2:.dll=.ilk)
 
 
 # Include parent definitions.
-include ../platform.ini
+include ../system.ini
 
 # EOF #
