Move the DLL resource file

--- a/make/global.ini
+++ b/make/global.ini
@@ -45,6 +45,9 @@ MXCPP_SRC_ROOT := $(MXCPP_PROJECT_ROOT)src/
 # Main include directory.
 MXCPP_INCLUDE_ROOT := $(MXCPP_PROJECT_ROOT)inc
 
+# Main resource directory.
+MXCPP_RES_ROOT := $(MXCPP_SRC_ROOT)res/
+
 
 # Library main build types.
 MXCPP_TARGET_TYPE_SHARE := LIB LIBMT DLL
