--- a/make/global.ini
+++ b/make/global.ini
@@ -17,7 +17,7 @@ MXCPP_LIBRARY_NAME := $(MXCPP_CONFIG_SUFFIX)cpp
 
 
 # Source files list.
-MXCPP_SRC_LIST :=	\
+MXCPP_SRC_LIST =	\
 debug.cpp	\
 Memory.cpp	\
 new.cpp	\
@@ -31,8 +31,12 @@ App/TestApp.cpp	\
 System/Error.cpp	\
 $(MXCPP_SRC_LIST_PLATFORM)
 
+# Resource files list.
+MXCPP_RSRC_LIST =	\
+$(MXCPP_RSRC_LIST_PLATFORM)
+
 # Tests list.
-MXCPP_TEST_LIST :=	\
+MXCPP_TEST_LIST =	\
 Except.cpp	\
 Memory.cpp	\
 purec.c	\
@@ -57,10 +61,8 @@ MXCPP_TARGET_SUBTYPE_CHARTYPE := ANSI UNICODE
 MXCPP_TARGET_SUBTYPE_DBGINFO := DEBUG RELEASE
 
 
-# Modifiers for different main build types.
-MXCPP_LIBCONFIG_LIB := LIB
-MXCPP_LIBCONFIG_LIBMT := LIB
-MXCPP_LIBCONFIG_DLL := DLL
+# DLL configuration of libraries.
+MXCPP_DLLCONFIG_DLL := DLL
 
 # Modifiers for different main build types.
 MXCPP_MOD_LIB := 
@@ -80,9 +82,12 @@ MXCPP_LIBMT_CONSTRUCT_NAME = $(LIB_PFX)$(MXCPP_LIBRARY_NAME)mt$(1).$(LIB_SFX)
 MXCPP_DLL_CONSTRUCT_NAME = $(DLL_PFX)$(MXCPP_LIBRARY_NAME)$(MXCPP_LIBRARY_VERSION)$(1).$(DLL_SFX)
 
 
-MXCPP_COMPILERS_LIST := C CXX LIBC_ DLLC_
+# List of all compilers.
+#
+# Used to automatic creation of build flags.
+MXCPP_COMPILERS_LIST := C CXX RC LNKC_ LIBC_ DLLC_
 
-# Flags of the C++ compiler for different configurations.
+# Flags of the ANSI-C compiler for different configurations.
 MXCPP_CFLAGS_LIB :=
 MXCPP_CFLAGS_LIBMT := $(CXX_DEFINE)_MT
 MXCPP_CFLAGS_DLL := $(CXX_DEFINE)_MT $(CXX_DEFINE)_DLL $(CXX_DEFINE)MXCPP_MAKEDLL
@@ -92,10 +97,6 @@ MXCPP_CFLAGS_RELEASE := $(CXX_DEFINE)NDEBUG
 MXCPP_CFLAGS_ANSI :=
 MXCPP_CFLAGS_UNICODE := $(CXX_DEFINE)UNICODE
 
-$(foreach libtype,$(MXCPP_TARGET_TYPE_SHARE),\
-$(foreach config,$(MXCPP_TARGET_SUBTYPE_CHARTYPE) $(MXCPP_TARGET_SUBTYPE_DBGINFO),\
-	$(eval MXCPP_CFLAGS_$(libtype)_$(config) :=)))
-
 # Flags of the C++ compiler for different configurations.
 $(foreach config,$(MXCPP_TARGET_TYPE_SHARE) $(MXCPP_TARGET_SUBTYPE_CHARTYPE) $(MXCPP_TARGET_SUBTYPE_DBGINFO),\
 	$(eval MXCPP_CXXFLAGS_$(config) := $(MXCPP_CFLAGS_$(config))))
@@ -103,6 +104,12 @@ $(foreach config,$(MXCPP_TARGET_TYPE_SHARE) $(MXCPP_TARGET_SUBTYPE_CHARTYPE) $(M
 $(foreach libtype,$(MXCPP_TARGET_TYPE_SHARE),\
 $(foreach config,$(MXCPP_TARGET_SUBTYPE_CHARTYPE) $(MXCPP_TARGET_SUBTYPE_DBGINFO),\
 	$(eval MXCPP_CXXFLAGS_$(libtype)_$(config) := $(MXCPP_CFLAGS_$(libtype)_$(config)))))
+
+# Flags of the resource compiler for different configurations.
+MXCPP_RCFLAGS_DEBUG := $(RC_DEFINE)_DEBUG
+MXCPP_RCFLAGS_RELEASE := $(RC_DEFINE)NDEBUG
+MXCPP_RCFLAGS_ANSI :=
+MXCPP_RCFLAGS_UNICODE := $(RC_DEFINE)UNICODE
 
 
 
@@ -156,22 +163,37 @@ MXCPP_COMPILE_CC = $(call MXCPP_COMPILE_STANDARD,CC,C,$(1),$(2),$(3),$(4))
 # @param $(4) The debuginfo configuration type.
 MXCPP_COMPILE_CXX = $(call MXCPP_COMPILE_STANDARD,CXX,CXX,$(1),$(2),$(3),$(4))
 
+# The command for compiling resources.
+#
+# @param $(1) The source file name(s).
+# @param $(2) The character configuration type.
+# @param $(3) The debuginfo configuration type.
+MXCPP_COMPILE_RC = $(call MXCPP_COMPILE_STANDARD,RC,RC,$(1),,$(2),$(3))
 
-# The standard command for building libraries.
+
+# The standard command for linking.
 #
 # @param $(1) The library configuration (LIB or DLL).
 # @param $(2) The object files list.
-# @param $(3) The character configuration type.
-# @param $(4) The debuginfo configuration type.
-MXCPP_BUILD_LIB_STANDARD = $($(1)) $(MXCPP_$(1)_FLAGS) $(if $(strip $(MXCPP_$(1)_FLAGS_$(3))),$(MXCPP_$(1)_FLAGS_$(3)) )$(if $(strip $(MXCPP_$(1)_FLAGS_$(4))),$(MXCPP_$(1)_FLAGS_$(4)) )$($(1)_OUT)$$@ $(2)
+# @param $(3) The resource files list.
+# @param $(4) The character configuration type.
+# @param $(5) The debuginfo configuration type.
+MXCPP_BUILD_LINK_STANDARD = $($(1)) $(MXCPP_$(1)_FLAGS) $(if $(strip $(MXCPP_$(1)_FLAGS_$(4))),$(MXCPP_$(1)_FLAGS_$(4)) )$(if $(strip $(MXCPP_$(1)_FLAGS_$(5))),$(MXCPP_$(1)_FLAGS_$(5)) )$($(1)_OUT)$$@ $(2) $(3)
 
 # The command for building libraries.
 #
 # @param $(1) The object files list.
 # @param $(2) The character configuration type.
 # @param $(3) The debuginfo configuration type.
-MXCPP_BUILD_LIB = $(call MXCPP_BUILD_LIB_STANDARD,LIBC,$(1),$(2),$(3))
-MXCPP_BUILD_DLL = $(call MXCPP_BUILD_LIB_STANDARD,DLLC,$(1),$(2),$(3))
+MXCPP_BUILD_LIB = $(LIBC) $(MXCPP_LIBC_FLAGS) $(if $(strip $(MXCPP_LIBC_FLAGS_$(2))),$(MXCPP_LIBC_FLAGS_$(2)) )$(if $(strip $(MXCPP_LIBC_FLAGS_$(3))),$(MXCPP_LIBC_FLAGS_$(3)) )$(LIBC_OUT)$$@ $(1)
+
+# The command for building dynamic libraries.
+#
+# @param $(1) The object files list.
+# @param $(2) The resource files list.
+# @param $(3) The character configuration type.
+# @param $(4) The debuginfo configuration type.
+MXCPP_BUILD_DLL = $(call MXCPP_BUILD_LINK_STANDARD,DLLC,$(1),$(2),$(3),$(4))
 
 
 # EOF #
