--- a/make/msw/platform.ini
+++ b/make/msw/platform.ini
@@ -12,6 +12,11 @@
 MXCPP_PROJECT_ROOT := ../../../../
 
 
+# Platform-dependent resource files list.
+MXCPP_RSRC_LIST_PLATFORM =	\
+$(MXCPP_RSRC_LIST_SYSTEM)
+
+
 PATH_SEP := $(strip \)
 
 # Create directory.
@@ -29,7 +34,16 @@ NOOUT := >NUL
 NOERROUT := 2>NUL
 
 
+# Suffix of object file names.
+# (cannot be empty)
+OBJ_SFX := obj
+
+# Suffix of object libraries.
+# (cannot be empty)
+LIB_SFX := lib
+
 # Suffix of executables.
+# (can be empty)
 EXE_SFX := .exe
 
 
