--- a/make/msw/win32/system.ini
+++ b/make/msw/win32/system.ini
@@ -8,9 +8,14 @@
 #
 
 
+# System-dependent resource files list.
+MXCPP_RSRC_LIST_SYSTEM =	\
+$(MXCPP_CONFIG_SUFFIX)CppFW.rc	\
+$(MXCPP_RSRC_LIST_COMPILER)
+
+
 # Suffix of shared (dynamic loaded) libraries.
 DLL_SFX := dll
-
 
 # Platform configuration flags.
 MXCPP_CFLAGS_SYSTEM := $(CC_DEFINE)_WINDOWS $(CC_DEFINE)_WIN32 $(CC_DEFINE)WIN32
