--- a/make/msw/platform.ini
+++ b/make/msw/platform.ini
@@ -13,8 +13,8 @@ MXCPP_PROJECT_ROOT := ../../../../
 
 
 # Platform-dependent resource files list.
-MXCPP_RSRC_LIST_PLATFORM =	\
-$(MXCPP_RSRC_LIST_SYSTEM)
+MXCPP_RES_LIST_PLATFORM =	\
+$(MXCPP_RES_LIST_SYSTEM)
 
 
 PATH_SEP := $(strip \)
@@ -33,14 +33,6 @@ ECHO := echo
 NOOUT := >NUL
 NOERROUT := 2>NUL
 
-
-# Suffix of object file names.
-# (cannot be empty)
-OBJ_SFX := obj
-
-# Suffix of object libraries.
-# (cannot be empty)
-LIB_SFX := lib
 
 # Suffix of executables.
 # (can be empty)
