--- a/make/msw/win32/msvc7/makefile.ini
+++ b/make/msw/win32/msvc7/makefile.ini
@@ -12,6 +12,11 @@
 #     Compiler options     #
 ############################
 
+# Suffix of object file names.
+# (cannot be empty)
+OBJ_SFX := obj
+
+
 # ANSI-C compiler settings.
 
 # The compiler executable.
@@ -110,6 +115,10 @@ RC_INCLUDE := /i
 # overridden on the make command line)
 LDFLAGS := /nologo
 
+# Suffix of object libraries.
+# (cannot be empty)
+LIB_SFX := lib
+
 
 # C++ linker settings.
 
@@ -127,6 +136,8 @@ LNKC_OUT := /out:
 # Flags for different build configurations.
 LNKC_FLAGS_DEBUG := /debug /opt:noref
 LNKC_FLAGS_RELEASE := /opt:ref
+
+LNKC_LIB_SFX := .$(LIB_SFX)
 
 
 # C++ librarian compiler settings.
