--- a/make/msw/win32/system.ini
+++ b/make/msw/win32/system.ini
@@ -9,9 +9,9 @@
 
 
 # System-dependent resource files list.
-MXCPP_RSRC_LIST_SYSTEM =	\
+MXCPP_RES_LIST_SYSTEM =	\
 $(MXCPP_CONFIG_SUFFIX)CppFW.rc	\
-$(MXCPP_RSRC_LIST_COMPILER)
+$(MXCPP_RES_LIST_COMPILER)
 
 
 # Suffix of shared (dynamic loaded) libraries.
