--- a/make/global.ini
+++ b/make/global.ini
@@ -32,8 +32,8 @@ System/Error.cpp	\
 $(MXCPP_SRC_LIST_PLATFORM)
 
 # Resource files list.
-MXCPP_RSRC_LIST =	\
-$(MXCPP_RSRC_LIST_PLATFORM)
+MXCPP_RES_LIST =	\
+$(MXCPP_RES_LIST_PLATFORM)
 
 # Tests list.
 MXCPP_TEST_LIST =	\
@@ -51,6 +51,9 @@ MXCPP_INCLUDE_ROOT := $(MXCPP_PROJECT_ROOT)inc
 
 # Main resource directory.
 MXCPP_RES_ROOT := $(MXCPP_SRC_ROOT)res/
+
+# Main test directory.
+MXCPP_TEST_ROOT := $(MXCPP_PROJECT_ROOT)tests/
 
 
 # Library main build types.
@@ -77,9 +80,12 @@ MXCPP_MOD_DEBUG := d
 
 
 # Construct library name for different build types.
-MXCPP_LIB_CONSTRUCT_NAME = $(LIB_PFX)$(MXCPP_LIBRARY_NAME)$(1).$(LIB_SFX)
-MXCPP_LIBMT_CONSTRUCT_NAME = $(LIB_PFX)$(MXCPP_LIBRARY_NAME)mt$(1).$(LIB_SFX)
-MXCPP_DLL_CONSTRUCT_NAME = $(DLL_PFX)$(MXCPP_LIBRARY_NAME)$(MXCPP_LIBRARY_VERSION)$(1).$(DLL_SFX)
+MXCPP_LIB_CONSTRUCT_NAME = $(MXCPP_LIBRARY_NAME)$(1)
+MXCPP_LIBMT_CONSTRUCT_NAME = $(MXCPP_LIBRARY_NAME)mt$(1)
+MXCPP_DLL_CONSTRUCT_NAME = $(MXCPP_LIBRARY_NAME)$(MXCPP_LIBRARY_VERSION)$(1)
+MXCPP_LIB_CONSTRUCT_FULLNAME = $(LIB_PFX)$(call MXCPP_LIB_CONSTRUCT_NAME,$(1)).$(LIB_SFX)
+MXCPP_LIBMT_CONSTRUCT_FULLNAME = $(LIB_PFX)$(call MXCPP_LIBMT_CONSTRUCT_NAME,$(1)).$(LIB_SFX)
+MXCPP_DLL_CONSTRUCT_FULLNAME = $(DLL_PFX)$(call MXCPP_DLL_CONSTRUCT_NAME,$(1)).$(DLL_SFX)
 
 
 # List of all compilers.
@@ -89,13 +95,13 @@ MXCPP_COMPILERS_LIST := C CXX RC LNKC_ LIBC_ DLLC_
 
 # Flags of the ANSI-C compiler for different configurations.
 MXCPP_CFLAGS_LIB :=
-MXCPP_CFLAGS_LIBMT := $(CXX_DEFINE)_MT
-MXCPP_CFLAGS_DLL := $(CXX_DEFINE)_MT $(CXX_DEFINE)_DLL $(CXX_DEFINE)MXCPP_MAKEDLL
+MXCPP_CFLAGS_LIBMT := $(CC_DEFINE)_MT
+MXCPP_CFLAGS_DLL := $(CC_DEFINE)_MT
 
-MXCPP_CFLAGS_DEBUG := $(CXX_DEFINE)_DEBUG
-MXCPP_CFLAGS_RELEASE := $(CXX_DEFINE)NDEBUG
+MXCPP_CFLAGS_DEBUG := $(CC_DEFINE)_DEBUG
+MXCPP_CFLAGS_RELEASE := $(CC_DEFINE)NDEBUG
 MXCPP_CFLAGS_ANSI :=
-MXCPP_CFLAGS_UNICODE := $(CXX_DEFINE)UNICODE
+MXCPP_CFLAGS_UNICODE := $(CC_DEFINE)UNICODE
 
 # Flags of the C++ compiler for different configurations.
 $(foreach config,$(MXCPP_TARGET_TYPE_SHARE) $(MXCPP_TARGET_SUBTYPE_CHARTYPE) $(MXCPP_TARGET_SUBTYPE_DBGINFO),\
@@ -142,33 +148,36 @@ $(foreach config,$(MXCPP_TARGET_SUBTYPE_CHARTYPE) $(MXCPP_TARGET_SUBTYPE_DBGINFO
 # @param $(1) The compiler name.
 # @param $(2) The compiler flags ID.
 # @param $(3) The source file name(s).
-# @param $(4) The library configuration type.
-# @param $(5) The character configuration type.
-# @param $(6) The debuginfo configuration type.
-MXCPP_COMPILE_STANDARD = $($(1)) $(MXCPP_$(2)FLAGS) $(if $(strip $(MXCPP_$(2)FLAGS_$(4))),$(MXCPP_$(2)FLAGS_$(4)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(5))),$(MXCPP_$(2)FLAGS_$(5)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(6))),$(MXCPP_$(2)FLAGS_$(6)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(4)_$(5))),$(MXCPP_$(2)FLAGS_$(4)_$(5)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(4)_$(6))),$(MXCPP_$(2)FLAGS_$(4)_$(6)) )$(if $(strip $($(2)FLAGS_OPTIONS)),$($(2)FLAGS_OPTIONS) )$($(1)_OUT)$$(subst /,$$(PATH_SEP),$$@) $(3)
+# @param $(4) The extra compile flags.
+# @param $(5) The library configuration type.
+# @param $(6) The character configuration type.
+# @param $(7) The debuginfo configuration type.
+MXCPP_COMPILE_STANDARD = $($(1)) $(MXCPP_$(2)FLAGS) $(if $(strip $(MXCPP_$(2)FLAGS_$(5))),$(MXCPP_$(2)FLAGS_$(5)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(6))),$(MXCPP_$(2)FLAGS_$(6)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(7))),$(MXCPP_$(2)FLAGS_$(7)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(5)_$(6))),$(MXCPP_$(2)FLAGS_$(5)_$(6)) )$(if $(strip $(MXCPP_$(2)FLAGS_$(5)_$(7))),$(MXCPP_$(2)FLAGS_$(5)_$(7)) )$(if $(strip $(4)),$(4) )$(if $(strip $($(2)FLAGS_OPTIONS)),$($(2)FLAGS_OPTIONS) )$($(1)_OUT)$$(subst /,$$(PATH_SEP),$$@) $(3)
 
 # The command for compiling ANSI-C sources.
 #
 # @param $(1) The source file name(s).
-# @param $(2) The library configuration type.
-# @param $(3) The character configuration type.
-# @param $(4) The debuginfo configuration type.
-MXCPP_COMPILE_CC = $(call MXCPP_COMPILE_STANDARD,CC,C,$(1),$(2),$(3),$(4))
+# @param $(2) The extra compile flags.
+# @param $(3) The library configuration type.
+# @param $(4) The character configuration type.
+# @param $(5) The debuginfo configuration type.
+MXCPP_COMPILE_CC = $(call MXCPP_COMPILE_STANDARD,CC,C,$(1),$(2),$(3),$(4),$(5))
 
 # The command for compiling C++ sources.
 #
 # @param $(1) The source file name(s).
-# @param $(2) The library configuration type.
-# @param $(3) The character configuration type.
-# @param $(4) The debuginfo configuration type.
-MXCPP_COMPILE_CXX = $(call MXCPP_COMPILE_STANDARD,CXX,CXX,$(1),$(2),$(3),$(4))
+# @param $(2) The extra compile flags.
+# @param $(3) The library configuration type.
+# @param $(4) The character configuration type.
+# @param $(5) The debuginfo configuration type.
+MXCPP_COMPILE_CXX = $(call MXCPP_COMPILE_STANDARD,CXX,CXX,$(1),$(2),$(3),$(4),$(5))
 
 # The command for compiling resources.
 #
 # @param $(1) The source file name(s).
 # @param $(2) The character configuration type.
 # @param $(3) The debuginfo configuration type.
-MXCPP_COMPILE_RC = $(call MXCPP_COMPILE_STANDARD,RC,RC,$(1),,$(2),$(3))
+MXCPP_COMPILE_RC = $(call MXCPP_COMPILE_STANDARD,RC,RC,$(1),,,$(3),$(4))
 
 
 # The standard command for linking.
@@ -176,9 +185,10 @@ MXCPP_COMPILE_RC = $(call MXCPP_COMPILE_STANDARD,RC,RC,$(1),,$(2),$(3))
 # @param $(1) The library configuration (LIB or DLL).
 # @param $(2) The object files list.
 # @param $(3) The resource files list.
-# @param $(4) The character configuration type.
-# @param $(5) The debuginfo configuration type.
-MXCPP_BUILD_LINK_STANDARD = $($(1)) $(MXCPP_$(1)_FLAGS) $(if $(strip $(MXCPP_$(1)_FLAGS_$(4))),$(MXCPP_$(1)_FLAGS_$(4)) )$(if $(strip $(MXCPP_$(1)_FLAGS_$(5))),$(MXCPP_$(1)_FLAGS_$(5)) )$($(1)_OUT)$$@ $(2) $(3)
+# @param $(4) The libraries list.
+# @param $(5) The character configuration type.
+# @param $(6) The debuginfo configuration type.
+MXCPP_BUILD_LINK_STANDARD = $($(1)) $(MXCPP_$(1)_FLAGS) $(if $(strip $(MXCPP_$(1)_FLAGS_$(5))),$(MXCPP_$(1)_FLAGS_$(5)) )$(if $(strip $(MXCPP_$(1)_FLAGS_$(6))),$(MXCPP_$(1)_FLAGS_$(6)) )$($(1)_OUT)$$@ $(2) $(3) $(4)
 
 # The command for building libraries.
 #
@@ -191,9 +201,19 @@ MXCPP_BUILD_LIB = $(LIBC) $(MXCPP_LIBC_FLAGS) $(if $(strip $(MXCPP_LIBC_FLAGS_$(
 #
 # @param $(1) The object files list.
 # @param $(2) The resource files list.
-# @param $(3) The character configuration type.
-# @param $(4) The debuginfo configuration type.
-MXCPP_BUILD_DLL = $(call MXCPP_BUILD_LINK_STANDARD,DLLC,$(1),$(2),$(3),$(4))
+# @param $(3) The libraries list.
+# @param $(4) The character configuration type.
+# @param $(5) The debuginfo configuration type.
+MXCPP_BUILD_DLL = $(call MXCPP_BUILD_LINK_STANDARD,DLLC,$(1),$(2),$(3),$(4),$(5))
+
+# The command for building exeutables.
+#
+# @param $(1) The object files list.
+# @param $(2) The resource files list.
+# @param $(3) The libraries list.
+# @param $(4) The character configuration type.
+# @param $(5) The debuginfo configuration type.
+MXCPP_BUILD_EXE = $(call MXCPP_BUILD_LINK_STANDARD,LNKC,$(1),$(2),$(3),$(4),$(5))
 
 
 # EOF #
