Full tests, support MSVC6, MSVC8, GCC3
Tests fully working with full cleanup.
Supported MSVC6, MSVC8, GCC3 compilers.

--- a/make/msw/win32/gcc/makefile.ini
+++ b/make/msw/win32/gcc/makefile.ini
@@ -2,7 +2,7 @@
 # @file
 #
 # Makefile for the Demo C++ Framework project
-#     - Microsoft Visual C++ 7.0 Compiler (definitions).
+#     - GNU Compiler (GCC) (definitions).
 #
 # @author Emil Maskovsky
 #
@@ -20,15 +20,15 @@ OBJ_SFX := obj
 # ANSI-C compiler settings.
 
 # The compiler executable.
-CC := cl -nologo
+CC := gcc
 
 # The compiler global flags.
 # (used standardized name CFLAFS, which can be
 # overridden on the make command line)
-CFLAGS := -GF
+CFLAGS :=
 
 # Output name flag.
-CC_OUT := -Fo
+CC_OUT := -o 
 # Compile-only flag.
 CC_COMPILE_ONLY := -c
 # Macro definition flag.
@@ -37,29 +37,20 @@ CC_DEFINE := -D
 CC_INCLUDE := -I
 
 # Flags for different build configurations.
-CFLAGS_DEBUG := -W4 -Od -ZI -GZ
-CFLAGS_RELEASE := -W3 -O2
-CFLAGS_LIB_DEBUG := -MLd
-CFLAGS_LIB_RELEASE := -ML
-CFLAGS_LIBMT_DEBUG := -MTd
-CFLAGS_LIBMT_RELEASE := -MT
-CFLAGS_DLL_DEBUG := -MDd
-CFLAGS_DLL_RELEASE := -MD
-
-# Special options, which are expanded at-the-place.
-CFLAGS_VCDB_NAME := vc70
-CFLAGS_OPTIONS = -Fd$$(@D)$(CFLAGS_VCDB_NAME).pdb
+CFLAGS_DEBUG := -Wall -g3
+CFLAGS_RELEASE := -w -o2
+CFLAGS_DLL := -fPIC
 
 
 # C++ compiler settings.
 
 # The compiler executable.
-CXX := $(CC)
+CXX := g++
 
 # The compiler global flags.
 # (used standardized name CXXFLAGS, which can be
 # overridden on the make command line)
-CXXFLAGS := $(CFLAGS) -EHsc -GR
+CXXFLAGS := $(CFLAGS) -fexceptions
 
 # Output name flag.
 CXX_OUT := $(CC_OUT)
@@ -73,25 +64,17 @@ CXX_INCLUDE := $(CC_INCLUDE)
 # Flags for different build configurations.
 CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
 CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
-CXXFLAGS_LIB_DEBUG := $(CFLAGS_LIB_DEBUG)
-CXXFLAGS_LIB_RELEASE := $(CFLAGS_LIB_RELEASE)
-CXXFLAGS_LIBMT_DEBUG := $(CFLAGS_LIBMT_DEBUG)
-CXXFLAGS_LIBMT_RELEASE := $(CFLAGS_LIBMT_RELEASE)
-CXXFLAGS_DLL_DEBUG := $(CFLAGS_DLL_DEBUG)
-CXXFLAGS_DLL_RELEASE := $(CFLAGS_DLL_RELEASE)
-
-# Special options, which are expanded at-the-place.
-CXXFLAGS_OPTIONS = $(CFLAGS_OPTIONS)
+CXXFLAGS_DLL := $(CFLAGS_DLL)
 
 
 # Resource compiler settings.
 
 # The compiler executable.
-RC := rc
+#RC := rc
 
 # Suffix of compiled resource files.
 # (cannot be empty, if RC defined)
-RES_SFX := res
+#RES_SFX := res
 
 # The compiler global flags.
 # (used standardized name RCFLAGS, which can be
@@ -114,43 +97,47 @@ RC_INCLUDE := /i
 # The linker global flags.
 # (used standardized name LDFLAGS, which can be
 # overridden on the make command line)
-LDFLAGS := /nologo /machine:I386 /subsystem:console
+LDFLAGS :=
+
+# Prefix of object libraries.
+# (can be empty)
+LIB_PFX = lib
 
 # Suffix of object libraries.
 # (cannot be empty)
-LIB_SFX := lib
+LIB_SFX := a
 
 
 # C++ linker settings.
 
 # The linker executable.
-LNKC := link
+LNKC := $(CXX)
 
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-LNKC_FLAGS := $(LDFLAGS)
+LNKC_FLAGS := $(CXXFLAGS) $(LDFLAGS)
 
 # Output name flag.
-LNKC_OUT := /out:
+LNKC_OUT := $(CXX_OUT)
 
 # Flags for different build configurations.
-LNKC_FLAGS_DEBUG := /debug /opt:noref
-LNKC_FLAGS_RELEASE := /opt:ref
+LNKC_FLAGS_DEBUG := $(CXXFLAGS_DEBUG)
+LNKC_FLAGS_RELEASE := $(CXXFLAGS_RELEASE)
 
-LNKC_LIB_SFX := .$(LIB_SFX)
+LNKC_LIB_PFX := -l
 
 
 # C++ librarian compiler settings.
 
 # The librarian executable.
-LIBC := $(LNKC)
+LIBC := ar
 
 # The librarian global flags.
-LIBC_FLAGS := /lib /nologo
+LIBC_FLAGS := r
 
 # Output name flag.
-LIBC_OUT := $(LNKC_OUT)
+LIBC_OUT :=
 
 
 # C++ dynamic library linker settings.
@@ -161,7 +148,7 @@ DLLC := $(LNKC)
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-DLLC_FLAGS := /dll $(LNKC_FLAGS)
+DLLC_FLAGS := $(LNKC_FLAGS) -fPIC -shared
 
 # Output name flag.
 DLLC_OUT := $(LNKC_OUT)
@@ -172,14 +159,14 @@ DLLC_FLAGS_RELEASE := $(LNKC_FLAGS_RELEASE)
 
 
 # Addditional clean masks for 'clean...' targets.
-MXCPP_CLEAN_MASK = $(1)*.sbr
-MXCPP_CLEAN_MASK_DEBUG = $(1)$(CFLAGS_VCDB_NAME).pdb $(1)$(CFLAGS_VCDB_NAME).idb
-MXCPP_CLEAN_MASK_TEST = $(1)*.sbr
-MXCPP_CLEAN_MASK_TEST_DEBUG = $(1)$(CFLAGS_VCDB_NAME).idb $(1)*.pdb $(1)*.ilk
+MXCPP_CLEAN_MASK = 
+MXCPP_CLEAN_MASK_DEBUG = 
+MXCPP_CLEAN_MASK_TEST = 
+MXCPP_CLEAN_MASK_TEST_DEBUG = 
 
 # Addditional clean masks for 'cleanall...' targets.
-MXCPP_CLEANALL_MASK_DLL = $(2:.dll=.lib) $(2:.dll=.exp)
-MXCPP_CLEANALL_MASK_DLL_DEBUG = $(2:.dll=.pdb) $(2:.dll=.ilk)
+MXCPP_CLEANALL_MASK_DLL = 
+MXCPP_CLEANALL_MASK_DLL_DEBUG = 
 
 
 # Include parent definitions.
