--- a/make/msw/win32/msvc6/makefile.ini
+++ b/make/msw/win32/msvc6/makefile.ini
@@ -2,7 +2,7 @@
 # @file
 #
 # Makefile for the Demo C++ Framework project
-#     - Microsoft Visual C++ 7.0 Compiler (definitions).
+#     - Microsoft Visual C++ 6.0 Compiler (definitions).
 #
 # @author Emil Maskovsky
 #
@@ -47,7 +47,7 @@ CFLAGS_DLL_DEBUG := -MDd
 CFLAGS_DLL_RELEASE := -MD
 
 # Special options, which are expanded at-the-place.
-CFLAGS_VCDB_NAME := vc70
+CFLAGS_VCDB_NAME := vc60
 CFLAGS_OPTIONS = -Fd$$(@D)$(CFLAGS_VCDB_NAME).pdb
 
 
@@ -175,7 +175,7 @@ DLLC_FLAGS_RELEASE := $(LNKC_FLAGS_RELEASE)
 MXCPP_CLEAN_MASK = $(1)*.sbr
 MXCPP_CLEAN_MASK_DEBUG = $(1)$(CFLAGS_VCDB_NAME).pdb $(1)$(CFLAGS_VCDB_NAME).idb
 MXCPP_CLEAN_MASK_TEST = $(1)*.sbr
-MXCPP_CLEAN_MASK_TEST_DEBUG = $(1)$(CFLAGS_VCDB_NAME).idb $(1)*.pdb $(1)*.ilk
+MXCPP_CLEAN_MASK_TEST_DEBUG = $(1)*.pdb $(1)*.ilk $(1)$(CFLAGS_VCDB_NAME).idb
 
 # Addditional clean masks for 'cleanall...' targets.
 MXCPP_CLEANALL_MASK_DLL = $(2:.dll=.lib) $(2:.dll=.exp)
