--- a/make/msw/win32/msvc8/makefile.ini
+++ b/make/msw/win32/msvc8/makefile.ini
@@ -2,7 +2,7 @@
 # @file
 #
 # Makefile for the Demo C++ Framework project
-#     - Microsoft Visual C++ 7.0 Compiler (definitions).
+#     - Microsoft Visual C++ 8.0 Compiler (definitions).
 #
 # @author Emil Maskovsky
 #
@@ -47,7 +47,7 @@ CFLAGS_DLL_DEBUG := -MDd
 CFLAGS_DLL_RELEASE := -MD
 
 # Special options, which are expanded at-the-place.
-CFLAGS_VCDB_NAME := vc70
+CFLAGS_VCDB_NAME := vc80
 CFLAGS_OPTIONS = -Fd$$(@D)$(CFLAGS_VCDB_NAME).pdb
 
 
@@ -174,11 +174,11 @@ DLLC_FLAGS_RELEASE := $(LNKC_FLAGS_RELEASE)
 # Addditional clean masks for 'clean...' targets.
 MXCPP_CLEAN_MASK = $(1)*.sbr
 MXCPP_CLEAN_MASK_DEBUG = $(1)$(CFLAGS_VCDB_NAME).pdb $(1)$(CFLAGS_VCDB_NAME).idb
-MXCPP_CLEAN_MASK_TEST = $(1)*.sbr
+MXCPP_CLEAN_MASK_TEST = $(1)*.sbr $(1)*.manifest
 MXCPP_CLEAN_MASK_TEST_DEBUG = $(1)$(CFLAGS_VCDB_NAME).idb $(1)*.pdb $(1)*.ilk
 
 # Addditional clean masks for 'cleanall...' targets.
-MXCPP_CLEANALL_MASK_DLL = $(2:.dll=.lib) $(2:.dll=.exp)
+MXCPP_CLEANALL_MASK_DLL = $(2:.dll=.lib) $(2:.dll=.exp) $(2).manifest
 MXCPP_CLEANALL_MASK_DLL_DEBUG = $(2:.dll=.pdb) $(2:.dll=.ilk)
 
 
