Add DMC and global Win32 makefile

--- a/make/msw/win32/dmc/makefile.ini
+++ b/make/msw/win32/dmc/makefile.ini
@@ -2,7 +2,7 @@
 # @file
 #
 # Makefile for the Demo C++ Framework project
-#     - Microsoft Visual C++ 8.0 Compiler (definitions).
+#     - Digital Mars Compiler (DMC) (definitions).
 #
 # @author Emil Maskovsky
 #
@@ -20,15 +20,15 @@ OBJ_SFX := obj
 # ANSI-C compiler settings.
 
 # The compiler executable.
-CC := cl -nologo
+CC := dmc
 
 # The compiler global flags.
 # (used standardized name CFLAFS, which can be
 # overridden on the make command line)
-CFLAGS := -GF
+CFLAGS := -mn
 
 # Output name flag.
-CC_OUT := -Fo
+CC_OUT := -o
 # Compile-only flag.
 CC_COMPILE_ONLY := -c
 # Macro definition flag.
@@ -37,19 +37,8 @@ CC_DEFINE := -D
 CC_INCLUDE := -I
 
 # Flags for different build configurations.
-CFLAGS_DEBUG := -W4 -Od -ZI -RTCcsu
-CFLAGS_RELEASE := -W3 -O2
-# MSVC 8 does not any more have non-threaded runtime.
-CFLAGS_LIB_DEBUG := -MTd
-CFLAGS_LIB_RELEASE := -MT
-CFLAGS_LIBMT_DEBUG := -MTd
-CFLAGS_LIBMT_RELEASE := -MT
-CFLAGS_DLL_DEBUG := -MDd
-CFLAGS_DLL_RELEASE := -MD
-
-# Special options, which are expanded at-the-place.
-CFLAGS_VCDB_NAME := vc80
-CFLAGS_OPTIONS = -Fd$$(@D)$(CFLAGS_VCDB_NAME).pdb
+CFLAGS_DEBUG := -g -o-all
+CFLAGS_RELEASE := -w -o
 
 
 # C++ compiler settings.
@@ -60,7 +49,7 @@ CXX := $(CC)
 # The compiler global flags.
 # (used standardized name CXXFLAGS, which can be
 # overridden on the make command line)
-CXXFLAGS := $(CFLAGS) -EHsc -GR
+CXXFLAGS := $(CFLAGS) -Ae -Ar
 
 # Output name flag.
 CXX_OUT := $(CC_OUT)
@@ -74,25 +63,16 @@ CXX_INCLUDE := $(CC_INCLUDE)
 # Flags for different build configurations.
 CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
 CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
-CXXFLAGS_LIB_DEBUG := $(CFLAGS_LIB_DEBUG)
-CXXFLAGS_LIB_RELEASE := $(CFLAGS_LIB_RELEASE)
-CXXFLAGS_LIBMT_DEBUG := $(CFLAGS_LIBMT_DEBUG)
-CXXFLAGS_LIBMT_RELEASE := $(CFLAGS_LIBMT_RELEASE)
-CXXFLAGS_DLL_DEBUG := $(CFLAGS_DLL_DEBUG)
-CXXFLAGS_DLL_RELEASE := $(CFLAGS_DLL_RELEASE)
-
-# Special options, which are expanded at-the-place.
-CXXFLAGS_OPTIONS = $(CFLAGS_OPTIONS)
 
 
 # Resource compiler settings.
 
 # The compiler executable.
-RC := rc
+#RC := rc
 
 # Suffix of compiled resource files.
 # (cannot be empty, if RC defined)
-RES_SFX := res
+#RES_SFX := res
 
 # The compiler global flags.
 # (used standardized name RCFLAGS, which can be
@@ -115,7 +95,7 @@ RC_INCLUDE := /i
 # The linker global flags.
 # (used standardized name LDFLAGS, which can be
 # overridden on the make command line)
-LDFLAGS := /nologo /machine:I386 /subsystem:console
+LDFLAGS := -L/nologo
 
 # Suffix of object libraries.
 # (cannot be empty)
@@ -125,7 +105,7 @@ LIB_SFX := lib
 # C++ linker settings.
 
 # The linker executable.
-LNKC := link
+LNKC := $(CXX)
 
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
@@ -133,11 +113,11 @@ LNKC := link
 LNKC_FLAGS := $(LDFLAGS)
 
 # Output name flag.
-LNKC_OUT := /out:
+LNKC_OUT := $(CXX_OUT)
 
 # Flags for different build configurations.
-LNKC_FLAGS_DEBUG := /debug /opt:noref
-LNKC_FLAGS_RELEASE := /opt:ref
+LNKC_FLAGS_DEBUG := -L/debug
+LNKC_FLAGS_RELEASE :=
 
 LNKC_LIB_SFX := .$(LIB_SFX)
 
@@ -145,13 +125,13 @@ LNKC_LIB_SFX := .$(LIB_SFX)
 # C++ librarian compiler settings.
 
 # The librarian executable.
-LIBC := $(LNKC)
+LIBC := dmlib
 
 # The librarian global flags.
-LIBC_FLAGS := /lib /nologo
+LIBC_FLAGS := -c
 
 # Output name flag.
-LIBC_OUT := $(LNKC_OUT)
+LIBC_OUT :=
 
 
 # C++ dynamic library linker settings.
@@ -162,7 +142,7 @@ DLLC := $(LNKC)
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-DLLC_FLAGS := /dll $(LNKC_FLAGS)
+DLLC_FLAGS := $(LDFLAGS) -L/dll
 
 # Output name flag.
 DLLC_OUT := $(LNKC_OUT)
@@ -173,14 +153,14 @@ DLLC_FLAGS_RELEASE := $(LNKC_FLAGS_RELEASE)
 
 
 # Addditional clean masks for 'clean...' targets.
-MXCPP_CLEAN_MASK = $(1)*.sbr
-MXCPP_CLEAN_MASK_DEBUG = $(1)$(CFLAGS_VCDB_NAME).pdb $(1)$(CFLAGS_VCDB_NAME).idb
-MXCPP_CLEAN_MASK_TEST = $(1)*.sbr $(1)*.manifest
-MXCPP_CLEAN_MASK_TEST_DEBUG = $(1)$(CFLAGS_VCDB_NAME).idb $(1)*.pdb $(1)*.ilk
+MXCPP_CLEAN_MASK = 
+MXCPP_CLEAN_MASK_DEBUG = 
+MXCPP_CLEAN_MASK_TEST = 
+MXCPP_CLEAN_MASK_TEST_DEBUG = 
 
 # Addditional clean masks for 'cleanall...' targets.
-MXCPP_CLEANALL_MASK_DLL = $(2:.dll=.lib) $(2:.dll=.exp) $(2).manifest
-MXCPP_CLEANALL_MASK_DLL_DEBUG = $(2:.dll=.pdb) $(2:.dll=.ilk)
+MXCPP_CLEANALL_MASK_DLL = 
+MXCPP_CLEANALL_MASK_DLL_DEBUG = 
 
 
 # Include parent definitions.
