--- a/make/msw/win32/gcc/makefile.ini
+++ b/make/msw/win32/gcc/makefile.ini
@@ -159,7 +159,7 @@ DLLC_FLAGS_RELEASE := $(LNKC_FLAGS_RELEASE)
 
 
 # Addditional clean masks for 'clean...' targets.
-MXCPP_CLEAN_MASK = 
+MXCPP_CLEAN_MASK = *.o *.s
 MXCPP_CLEAN_MASK_DEBUG = 
 MXCPP_CLEAN_MASK_TEST = 
 MXCPP_CLEAN_MASK_TEST_DEBUG = 
