--- a/make/msw/win32/msvc7/makefile.ini
+++ b/make/msw/win32/msvc7/makefile.ini
@@ -37,7 +37,7 @@ CC_DEFINE := -D
 CC_INCLUDE := -I
 
 # Flags for different build configurations.
-CFLAGS_DEBUG := -W4 -Od -ZI -GZ
+CFLAGS_DEBUG := -W4 -Od -ZI -RTCcsu
 CFLAGS_RELEASE := -W3 -O2
 CFLAGS_LIB_DEBUG := -MLd
 CFLAGS_LIB_RELEASE := -ML
